<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.AddroomActivity"
    android:background="@drawable/aboutus"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Create a new chatroom"
        android:focusable="true"
        app:titleTextColor="#ffffff">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/add_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/app_white"
        android:textSize="25sp"
        android:text="@string/add_hint1"/>

    <EditText
        android:id="@+id/add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:hint="@string/add_hint2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:textColor="@color/app_white"
        android:textColorHint="@color/app_white"/>

    <TextView
        android:id="@+id/add_tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/app_white"
        android:textSize="25sp"
        android:text="@string/add_hint3"/>

    <ListView
        android:id="@+id/username_list"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:divider="@null"/>

    <Button
        android:id="@+id/add_confirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/galaxy"
        android:textSize="20sp"
        android:text="@string/add_confirm"
        android:textColor="@color/app_white"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>